Refactoring index.js

--- a/submissions/KurosavaAkira/js-dom/index.html
+++ b/submissions/KurosavaAkira/js-dom/index.html
@@ -19,6 +19,8 @@
         <div id="main-page"></div>
     </div>
     
-    <script src="index.js"></script>
+    <script src="init.js"></script>
+    <script src="page-data.js"></script>
+    <script src="routing.js"></script>
 </body>
 </html>
