--- a/submissions/feroxes/js-dom/index.html
+++ b/submissions/feroxes/js-dom/index.html
@@ -18,13 +18,13 @@
             <li>Vision</li>
         </ul>
     </div>
-    <div id="content">
-        <h2>Iron Man</h2>
-        <p>Iron Man is a fictional superhero appearing in American comic books published by Marvel Comics. The character
+    <div id="hero">
+        <h2 id='hero__name'>Iron Man</h2>
+        <p id='hero__discription'> Iron Man is a fictional superhero appearing in American comic books published by Marvel Comics. The character
             was created by writer and editor Stan Lee, developed by scripter Larry Lieber, and designed by artists Don
             Heck and Jack Kirby. The character made his first appearance in Tales of Suspense #39 (cover dated March
             1963), and received his own title in Iron Man #1 (May 1968)</p>
-        <img src="style/img/ironMan.jpg" alt="">
+        <img id='hero__img' src="style/img/ironMan.jpg" alt="">
     </div>
 </div>
 
