--- a/submissions/IrynaY/js-dom/index.html
+++ b/submissions/IrynaY/js-dom/index.html
@@ -16,7 +16,6 @@
 
         <div id="menu_container">
             <img src="http://multanime.com.ua/images/66d73034dbd4.gif">
-            <ul id="menu"></ul>
         </div>
 
         <div id="content">
@@ -26,6 +25,6 @@
     </div>
     <div id="copy">© Designed by bad idea😁</div>
 </body>
-<script src="content.js"></script>
+<script src="сharacters.js"></script>
 <script src="index.js"></script>
 </html>
