--- a/submissions/maxovsanyuk/js-dom/index.html
+++ b/submissions/maxovsanyuk/js-dom/index.html
@@ -12,9 +12,7 @@
 
 <body>
     <nav id="menu"></nav>
-    <div id="content">
- 
-    </div>
+    <div id="content"></div>
     <div id="hellopreloader"><div id="hellopreloader_preload"></div>
 </body>
 
