--- a/submissions/o-msh/js-dom/index.html
+++ b/submissions/o-msh/js-dom/index.html
@@ -12,8 +12,20 @@
 
 <body>
     <div class="container">
-        <div class="mobile_menu"><div class="mobile_icon"><div class="line_1"></div><div class="line_2"></div><div class="line_3"></div></div></div>
-        <div class="navigation"></div>
+        <div class="mobile_menu">
+            <div class="mobile_icon">
+                <div class="line_1"></div>
+                <div class="line_2"></div>
+                <div class="line_3"></div>
+            </div>
+        </div>
+        <div class="navigation">
+            <ul>
+                <li class="menu_item active" data-link="#home">Home<div class="icon icon-home"></div></li>
+                <li class="menu_item" data-link="#random_user">Random user<div class="icon icon-users"></div></li>
+                <li class="menu_item" data-link="#currency">Currency<div class="icon icon-currency"></div></li>
+            </ul>
+        </div>
         <div class="content"></div>
     </div>
 </body>
