fix request changes

--- a/submissions/Oodmincheg/friend-api/index.html
+++ b/submissions/Oodmincheg/friend-api/index.html
@@ -18,21 +18,21 @@
       <aside>
           
         <form class="search">
-          <input type="text" placeholder="Search..." name="search" id="searchByName" size="18">
+          <input type="text" placeholder="Search..." name="search" id="search-by-name" size="18">
           <i class="fa fa-search"></i>
         </form>
         <div class="sort"><span>Gender</span>
-          <input type="radio" name="sortBySex" id="sortByMale">M</input>
-          <input type="radio" name="sortBySex" id="sortByFemale">F</input>
-          <input type="radio" name="sortBySex" id="bothSexes" checked="checked">Both</input>
+          <input type="radio" name="sort-by-sex" id="sort-by-male">M</input>
+          <input type="radio" name="sort-by-sex" id="sort-by-female">F</input>
+          <input type="radio" name="sort-by-sex" id="both-sexes" checked="checked">Both</input>
         </div>
         <div class="sort"><span>Name:</span> 
-          <input type="radio" name="sortBy" id="sortByNameAsc">↑</input>
-          <input type="radio" name="sortBy" id="sortByNameDesc">↓</input>
+          <input type="radio" name="sort-by" id="sort-by-name-asc">↑</input>
+          <input type="radio" name="sort-by" id="sort-by-name-desc">↓</input>
         </div>
         <div class="sort"><span></span>Age:</span>
-          <input type="radio" name="sortBy" id="sortByAgeAsc">↑</input>
-          <input type="radio" name="sortBy" id="sortByAgeDesc">↓</input>
+          <input type="radio" name="sort-by" id="sort-by-age-asc">↑</input>
+          <input type="radio" name="sort-by" id="sort-by-age-desc">↓</input>
         </div>
        
         <div class="reset">
