use event delegation

--- a/submissions/Oodmincheg/friend-api/index.html
+++ b/submissions/Oodmincheg/friend-api/index.html
@@ -15,8 +15,7 @@
       <h2>We're so lonely that wanna get better with random partner. Really.</h2>
     </header>
     <main>
-      <aside>
-          
+      <aside id="sortPanel">
         <form class="search">
           <input type="text" placeholder="Search..." name="search" id="search-by-name" size="18">
           <i class="fa fa-search"></i>
