--- a/submissions/feroxes/memory-game/index.html
+++ b/submissions/feroxes/memory-game/index.html
@@ -7,25 +7,7 @@
 </head>
 <body>
     <h1>Memory Game</h1>
-    <div id="game">
-        <div class="memory-card"><img class="hidden" src="style/img/1.png" alt=""></div>
-        <div class="memory-card"><img class="hidden" src="style/img/2.jpg" alt=""></div>
-        <div class="memory-card"><img class="hidden" src="style/img/1.png" alt=""></div>
-        <div class="memory-card"><img class="hidden" src="style/img/4.png" alt=""></div>
-        <div class="memory-card"><img class="hidden" src="style/img/6.jpg" alt=""></div>
-        <div class="memory-card"><img class="hidden" src="style/img/3.jpg" alt=""></div>
-        <div class="memory-card"><img class="hidden" src="style/img/7.jpg" alt=""></div>
-        <div class="memory-card"><img class="hidden" src="style/img/2.jpg" alt=""></div>
-        <div class="memory-card"><img class="hidden" src="style/img/7.jpg" alt=""></div>
-        <div class="memory-card"><img class="hidden" src="style/img/6.jpg" alt=""></div>
-        <div class="memory-card"><img class="hidden" src="style/img/8.jpg" alt=""></div>
-        <div class="memory-card"><img class="hidden" src="style/img/5.jpg" alt=""></div>
-        <div class="memory-card"><img class="hidden" src="style/img/5.jpg" alt=""></div>
-        <div class="memory-card"><img class="hidden" src="style/img/3.jpg" alt=""></div>
-        <div class="memory-card"><img class="hidden" src="style/img/4.png" alt=""></div>
-        <div class="memory-card"><img class="hidden" src="style/img/8.jpg" alt=""></div>
-    </div>
-
+    <div id="game"></div>
 	<script type="text/javascript" src="js/script.js"></script>
 </body>
 </html>
