Fixed bugs according to review

--- a/submissions/justdevway/js-dom/index.html
+++ b/submissions/justdevway/js-dom/index.html
@@ -40,7 +40,7 @@
             </div>
         </div>
     </div>
-    <div class="modal js-modal" style="display: block">
+    <div class="modal js-modal">
         <div class="modal__text js-modal__text">
             <p>Извините, но это демо-версия для Коттанов :)</p>
         </div>
