--- a/submissions/IrynaY/js-oop/index.html
+++ b/submissions/IrynaY/js-oop/index.html
@@ -9,6 +9,7 @@
     <div id="info_line">
         <p>Lives: <span id="live"></span></p>
         <p>Score: <span id="score"></span></p>
+        <p>Level: <span id="level"></span></p>
     </div>
     <script src="js/resources.js"></script>
     <script src="js/app.js"></script>
