--- a/submissions/beta-version-profile/memory-pair_game/index.html
+++ b/submissions/beta-version-profile/memory-pair_game/index.html
@@ -32,54 +32,54 @@
         </section>
 
         <ul class="card-deck">
-          <li class="card" type="angel">
+          <li class="card" data-type="angel">
             <img
               src="https://cdn1.iconfinder.com/data/icons/christmas-2298/48/christmas_pixel_perfect_color_line_icons_22-angel-512.png"
             />
           </li>
-          <li class="card" type="wreath"><img
+          <li class="card" data-type="wreath"><img
             src="https://cdn1.iconfinder.com/data/icons/christmas-2298/48/christmas_pixel_perfect_color_line_icons_12-wreath-512.png"
           /></i></li>
-          <li class="card" type="reindeer"><img
+          <li class="card" data-type="reindeer"><img
             src="https://cdn1.iconfinder.com/data/icons/christmas-2298/48/christmas_pixel_perfect_color_line_icons_2-reindeer-512.png"
           /></li>
-          <li class="card" type="santa"><img
+          <li class="card" data-type="santa"><img
             src="https://cdn1.iconfinder.com/data/icons/christmas-2298/48/christmas_pixel_perfect_color_line_icons_1-santa_claus-512.png"
           /></li>
-          <li class="card" type="snowman"><img
+          <li class="card" data-type="snowman"><img
             src="https://cdn1.iconfinder.com/data/icons/christmas-2298/48/christmas_pixel_perfect_color_line_icons_14-snowman-512.png"
           /></li>
-          <li class="card" type="gingerbread"><img
+          <li class="card" data-type="gingerbread"><img
             src="https://cdn1.iconfinder.com/data/icons/christmas-2298/48/christmas_pixel_perfect_color_line_icons_17-gingerbread-512.png"
           /></li>
-          <li class="card" type="elf"><img
+          <li class="card" data-type="elf"><img
             src="https://cdn1.iconfinder.com/data/icons/christmas-2298/48/christmas_pixel_perfect_color_line_icons_25-elf-512.png"
           /></li>
-          <li class="card" type="sock"><img
+          <li class="card" data-type="sock"><img
             src="https://cdn1.iconfinder.com/data/icons/christmas-2298/48/christmas_pixel_perfect_color_line_icons_4-sock-512.png"
           /></li>
-          <li class="card" type="gingerbread"><img
+          <li class="card" data-type="gingerbread"><img
             src="https://cdn1.iconfinder.com/data/icons/christmas-2298/48/christmas_pixel_perfect_color_line_icons_17-gingerbread-512.png"
           /></li>
-          <li class="card" type="snowman"><img
+          <li class="card" data-type="snowman"><img
             src="https://cdn1.iconfinder.com/data/icons/christmas-2298/48/christmas_pixel_perfect_color_line_icons_14-snowman-512.png"
           /></li>
-          <li class="card" type="angel"><img
+          <li class="card" data-type="angel"><img
             src="https://cdn1.iconfinder.com/data/icons/christmas-2298/48/christmas_pixel_perfect_color_line_icons_22-angel-512.png"
           /></li>
-          <li class="card" type="wreath"><img
+          <li class="card" data-type="wreath"><img
             src="https://cdn1.iconfinder.com/data/icons/christmas-2298/48/christmas_pixel_perfect_color_line_icons_12-wreath-512.png"
           /></li>
-          <li class="card" type="reindeer"><img
+          <li class="card" data-type="reindeer"><img
             src="https://cdn1.iconfinder.com/data/icons/christmas-2298/48/christmas_pixel_perfect_color_line_icons_2-reindeer-512.png"
           /></li>
-          <li class="card" type="santa"><img
+          <li class="card" data-type="santa"><img
             src="https://cdn1.iconfinder.com/data/icons/christmas-2298/48/christmas_pixel_perfect_color_line_icons_1-santa_claus-512.png"
           /></li>
-          <li class="card" type="elf"><img
+          <li class="card" data-type="elf"><img
             src="https://cdn1.iconfinder.com/data/icons/christmas-2298/48/christmas_pixel_perfect_color_line_icons_25-elf-512.png"
           /></li>
-          <li class="card" type="sock"><img
+          <li class="card" data-type="sock"><img
             src="https://cdn1.iconfinder.com/data/icons/christmas-2298/48/christmas_pixel_perfect_color_line_icons_4-sock-512.png"
           /></li>
         </ul>
