--- a/submissions/MitchfFirstGit/Friends_App/index.html
+++ b/submissions/MitchfFirstGit/Friends_App/index.html
@@ -14,22 +14,26 @@
     <main class="flex-conteiner">
       <section class="search">
         <form >
-          <input type="text" class="searchName" placeholder="Search...">
-          <i class="fa fa-search"></i><br>
-          <strong>Gender:</strong>
-          <input type="radio" name="gender" value="genderMale" >M
-          <input type="radio" name="gender" value="genderFemale">F
-          <input type="radio" name="gender" value="genderAll" checked>All <br>
-          <strong>Name:</strong>
-          <input type="radio" name="sort" value="nameAsc" >A-Z
-          <input type="radio" name="sort" value="nameDesc">Z-A  <br>
-          <strong>Age:</strong>
-          <input type="radio" name="sort" value="ageAsc" >&#8593;
-          <input type="radio" name="sort" value="ageDesc">&#8595; <br>
+          <fieldset class="fieldset">
+            <legend>Find right person here</legend>
+            <input type="text" class="search-by-input" placeholder="Search...">
+            <i class="fa fa-search"></i><br>
+          
+            <strong>Gender:</strong>
+            <input type="radio" name="gender" value="male" >M           
+            <input type="radio" name="gender" value="female">F      
+            <input type="radio" name="gender" value="all" checked>All <br>  
+            <strong>Name:</strong>
+            <input type="radio" name="sort" value="nameAsc" >A-Z
+            <input type="radio" name="sort" value="nameDesc">Z-A  <br>
+            <strong>Age:</strong>
+            <input type="radio" name="sort" value="ageAsc" >&#8593;
+            <input type="radio" name="sort" value="ageDesc">&#8595; <br>
+          </fieldset>
           <button type="reset">Reset changes</button>
         </form>
       </section>
-      <section class="allFriends">
+      <section class="all-friends">      
       </section>
     </main>
     <script type="text/javascript" src="add.js"></script>
