--- a/submissions/igkos/js-dom/index.html
+++ b/submissions/igkos/js-dom/index.html
@@ -9,8 +9,10 @@
     <title>js-doom</title>
     <script src="index.js"></script>
     <script src="page-data.js"></script>
-    <script src="highlight/highlight.pack.js"></script>
-    <link rel="stylesheet" href="highlight/styles/github.css">
+
+<link rel="stylesheet"
+      href="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.13.1/build/styles/default.min.css">
+<script src="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.13.1/build/highlight.min.js"></script>
 
 
 
