Add class for default item

--- a/submissions/webdevagent/js-dom/index.html
+++ b/submissions/webdevagent/js-dom/index.html
@@ -12,7 +12,7 @@
 
   <div id='content'>
     <h3 class="listItem Git">Git Basics</h3>
-    <div class='gits description first'>
+    <div class='gits description showTab'>
 
       <ul>
         <li><a href="https://www.udacity.com/course/how-to-use-git-and-github--ud775">How to use Git and GitHub</a></li>
