--- a/submissions/Aldegid/js-dom/index.html
+++ b/submissions/Aldegid/js-dom/index.html
@@ -6,7 +6,7 @@
 	<meta charset="utf-8">
 	<!-- <base href="/"> -->
 
-	<title>DOM Practice</title>
+	<title>OptimizedHTML 4</title>
 	<meta name="description" content="">
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -35,7 +35,7 @@
 			<div class="header__logo">
 				<a href="#">FrontEnd</a>
 			</div>
-			<span class="fa fa-bars header__hamburger"></span>
+			<span class="header__hamburger"><img src="img/hamburger.svg" alt="hamburger"></span>
 		</header>
 		<div class="cont">
 			<nav class="nav">
@@ -50,9 +50,8 @@
 			<main class="main">
 				<div class="main__content">
 					<h2 class="h2">HTML</h2>
-					<div class="text">
-						<p>Hypertext Markup Language is the standard markup language for creating web pages and web applications. With Cascading Style Sheets (CSS) and JavaScript, it forms a triad of cornerstone technologies for the World Wide Web</p>
-						<p>Web browsers receive HTML documents from a web server or from local storage and render the documents into multimedia web pages. HTML describes the structure of a web page semantically and originally included cues for the appearance of the document.</p>
+					<div>
+						<p class="text">Hypertext Markup Language is the standard markup language for creating web pages and web applications. With Cascading Style Sheets (CSS) and JavaScript, it forms a triad of cornerstone technologies for the World Wide Web. Web browsers receive HTML documents from a web server or from local storage and render the documents into multimedia web pages. HTML describes the structure of a web page semantically and originally included cues for the appearance of the document.</p>
 					</div>
 
 				</div>
