--- a/submissions/Aldegid/js-dom/index.html
+++ b/submissions/Aldegid/js-dom/index.html
@@ -6,7 +6,7 @@
 	<meta charset="utf-8">
 	<!-- <base href="/"> -->
 
-	<title>OptimizedHTML 4</title>
+	<title>DOM Practice task</title>
 	<meta name="description" content="">
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
