--- a/submissions/Zihfred/Friends-App/index.html
+++ b/submissions/Zihfred/Friends-App/index.html
@@ -14,33 +14,33 @@
 <body>
 <div class="wrapper">
     <div id="friends-app">
-        <div class="sortBox">
-            <div class="sortBox__header">Сортировка:</div>
-            <div class="sortBox__sorted sortBox__sortedByAge">
-                <div class="sortBox__sortedHeader">По возрасту:</div>
-                <div class="sortBox__sortedIcons">
+        <div class="sortbox">
+            <div class="sortbox__header">Сортировка:</div>
+            <div class="sortbox__sorted sortBox__sortedByAge">
+                <div class="sortbox__sortedHeader">По возрасту:</div>
+                <div class="sortbox__sortedIcons">
                     <i class="fas fa-chevron-circle-up" data-type="ageUp"></i>
                     <i class="fas fa-chevron-circle-down" data-type="ageDown"></i>
                 </div>
             </div>
-            <div class="sortBox__sorted sortBox__sortedByName">
-                <div class="sortBox__sortedHeader">По имени:</div>
-                <div class="sortBox__sortedIcons">
+            <div class="sortbox__sorted sortBox__sortedByName">
+                <div class="sortbox__sortedHeader">По имени:</div>
+                <div class="sortbox__sortedIcons">
                     <i class="fas fa-sort-alpha-down" data-type="nameDown"></i>
                     <i class="fas fa-sort-alpha-up" data-type="nameUp"></i>
                 </div>
             </div>
-            <div class="sortBox__sorted sortBox__sortedByGender">
-                <div class="sortBox__sortedHeader">По полу:</div>
-                <div class="sortBox__sortedIcons">
+            <div class="sortbox__sorted sortBox__sortedByGender">
+                <div class="sortbox__sortedHeader">По полу:</div>
+                <div class="sortbox__sortedIcons">
                     <i class="fas fa-male" data-type="male"></i>
                     <i class="fas fa-female" data-type="female"></i>
                 </div>
             </div>
-            <div class="sortBox__sorted ">
-                <input type="text" placeholder="Enter Text" class="sortBox__sortedInput">
+            <div class="sortbox__sorted ">
+                <input type="text" placeholder="Enter Text" class="sortbox__sortedInput">
             </div>
-            <div class="sortBox__resetBtn">
+            <div class="sortbox__resetBtn">
                 Reset
             </div>
         </div>
