--- a/submissions/SergSenras/js-dom/index.html
+++ b/submissions/SergSenras/js-dom/index.html
@@ -11,7 +11,7 @@
     <script src="script.js"></script>
   </head>
   <body>
-    <header id="header">
+    <header id="header" class="header__wrapper">
       <a id="menu" class="header__menu">
         <img src='img/menu-icon.png' alt='menu'>
       </a>
@@ -20,7 +20,7 @@
       </h1>
     </header>
     
-    <nav id="nav">
+    <nav id="nav" class="nav__wrapper">
       <ul class="nav__list">
         <li class="nav__item" id="nav__main"><a href="#">Main</a></li>
         <li class="nav__item" id="nav__plot"><a href="#">Plot</a></li>
@@ -28,7 +28,7 @@
       </ul>
     </nav>
     
-    <main>
+    <main class='content'>
 
     </main>
   </body>
