--- a/submissions/SergSenras/js-dom/index.html
+++ b/submissions/SergSenras/js-dom/index.html
@@ -12,8 +12,8 @@
   </head>
   <body>
     <header id="header" class="header__wrapper">
-      <a id="menu" class="header__menu">
-        <img src='img/menu-icon.png' alt='menu'>
+      <a id="menu" class="header__menu link">
+        <img src='img/menu-icon.png' alt='menu' class="img__common">
       </a>
       <h1 class="header__title">
         Heroes of Might and Magic III
@@ -22,9 +22,9 @@
     
     <nav id="nav" class="nav__wrapper">
       <ul class="nav__list">
-        <li class="nav__item" id="nav__main"><a href="#">Main</a></li>
-        <li class="nav__item" id="nav__plot"><a href="#">Plot</a></li>
-        <li class="nav__item" id="nav__towns"><a href="#">Towns</a></li>
+        <li class="nav__item" id="nav__main"><a href="#" class="link">Main</a></li>
+        <li class="nav__item" id="nav__plot"><a href="#" class="link">Plot</a></li>
+        <li class="nav__item" id="nav__towns"><a href="#" class="link">Towns</a></li>
       </ul>
     </nav>
     
