--- a/submissions/frostwolm/js-dom/index.html
+++ b/submissions/frostwolm/js-dom/index.html
@@ -9,7 +9,7 @@
   <title>Dom project</title>
 </head>
 <body>
-  <section class="container">
+  <div class="container">
     <nav class="menu">
       <ul class="menu__list">
       </ul>
@@ -24,6 +24,6 @@
       });
     </script>
     <script src="js/app.js" type="text/javascript"></script>
-  </section>
+  </div>
 </body>
 </html>
