--- a/submissions/IrynaY/memory-pare-game/index.html
+++ b/submissions/IrynaY/memory-pare-game/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" type="text/css" href="style.css">
-  <title>🎄</title>
+  <title></title>
 </head>
 <body>
 </body>
