Added changed according to task

--- a/submissions/justdevway/memory-pair-game/index.html
+++ b/submissions/justdevway/memory-pair-game/index.html
@@ -15,14 +15,14 @@
             <div class="game__header">
                 <div class="game__header__start js-game__header__start">
                     <div class="game__controllers">
-                        <label class="game__controller" tabindex="0">
+                        <label class="game__controller js-game__controller" tabindex="0">
                             <p class="game__controller__text">Easy</p>
                             <input class="game__input js-game__input" type="radio" name="gameType" value="1">
                             <div class="game__check">
                                 <div class="game__check__round"></div>
                             </div>
                         </label>
-                        <label class="game__controller" tabindex="0">
+                        <label class="game__controller js-game__controller" tabindex="0">
                             <p class="game__controller__text">Hard</p>
                             <input class="game__input js-game__input" type="radio" name="gameType" value="0">
                             <div class="game__check">
