Changed game's logic, make interval instead of timer

--- a/submissions/justdevway/memory-pair-game/index.html
+++ b/submissions/justdevway/memory-pair-game/index.html
@@ -38,7 +38,7 @@
                     <div class="game__lvl">
                         Your level: <span class="game__lvl__indicator js-game__lvl__indicator">1</span>
                     </div>
-                    <div class="game__time js-game__time">60</div>
+                    <div class="game__time js-game__time"></div>
                     <div class="game__attempts">
                         <div class="game__attempt">
                             Your attempts: <span class="js-game__attempt--current">0</span>
