add event delegation and others

--- a/submissions/AlinaLadybug/DOM/side-menu/index.html
+++ b/submissions/AlinaLadybug/DOM/side-menu/index.html
@@ -13,24 +13,33 @@
         <div id="menu-wrapper">
             <ul class="menu">
                 <li class="skype active">
-                    <img src="img/after/skype.svg" alt="skype" />
+                    <img class="before" src="img/before/skype.svg" alt="skype" />
+                    <img class="after active-img" src="img/after/skype.svg" alt="skype"/>
+
                     <span class="tooltiptext">skype</span>
                 </li>
 
                 <li class="instagram">
-                    <img src="img/before/instagram.svg" alt="instagram" />
+                    <img class="before active-img" src="img/before/instagram.svg" alt="instagram" />
+                    <img class="after" src="img/after/instagram.svg" alt="instagram" />
                     <span class="tooltiptext">instagram</span>
                 </li>
                 <li class="twitter">
-                    <img src="img/before/twitter.svg" alt="twitter" />
+                    <img class="before active-img" src="img/before/twitter.svg" alt="twitter" />
+                    <img class="after" src="img/after/twitter.svg" alt="twitter" />
+                    
                     <span class="tooltiptext">twitter</span>
                 </li>
                 <li class="youtube">
-                    <img src="img/before/youtube.svg" alt="youtube" />
+                    <img class="before active-img" src="img/before/youtube.svg" alt="youtube" />
+                    <img class="after" src="img/after/youtube.svg" alt="youtube" />
+
                     <span class="tooltiptext">youtube</span>
                 </li>
                 <li class="facebook">
-                    <img src="img/before/facebook.svg" alt="facebook" />
+                    <img class="before active-img" src="img/before/facebook.svg" alt="facebook" />
+                    <img class="after" src="img/after/facebook.svg" alt="facebook" />
+
                     <span class="tooltiptext">facebook</span>
                 </li>
             </ul>
