--- a/submissions/justdevway/memory-pair-game/index.html
+++ b/submissions/justdevway/memory-pair-game/index.html
@@ -17,14 +17,14 @@
                     <div class="game__controllers">
                         <label class="game__controller js-game__controller" tabindex="0">
                             <p class="game__controller__text">Easy</p>
-                            <input class="game__input js-game__input" type="radio" name="gameType" value="1">
+                            <input class="game__input js-game__input" type="radio" name="game_type" value="1">
                             <div class="game__check">
                                 <div class="game__check__round"></div>
                             </div>
                         </label>
                         <label class="game__controller js-game__controller" tabindex="0">
                             <p class="game__controller__text">Hard</p>
-                            <input class="game__input js-game__input" type="radio" name="gameType" value="0">
+                            <input class="game__input js-game__input" type="radio" name="game_type" value="0">
                             <div class="game__check">
                                 <div class="game__check__round"></div>
                             </div>
@@ -49,7 +49,7 @@
                     </div>
                 </div>
             </div>
-            <div class="game__content">
+            <div class="game__content js-game__content is-hide">
                 <ul class="game__cards js-game__cards"></ul>
             </div>
         </div>
