--- a/submissions/SergSenras/js-dom/index.html
+++ b/submissions/SergSenras/js-dom/index.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="style.css">
 
+    <script src="data.js"></script>
     <script src="script.js"></script>
   </head>
   <body>
