--- a/submissions/Roman-Halenko/js-dom/index.html
+++ b/submissions/Roman-Halenko/js-dom/index.html
@@ -5,17 +5,16 @@
     <meta charset="utf-8">
     <title>Find your cap style</title>
     <link rel="stylesheet" href="css/style.css">
-    <script type="text/javascript" async src="main.js"></script>
   </head>
   <body>
     <header>
-      <span class="btn-menu"></span>
+      <span id="btn-menu"></span>
     </header>
     <section>
-      <nav>
+      <nav id="navbar">
         <ul>
             <li><a class="menu-item" href="#">59FIFTY</a></li>
-            <li><a class="menu-item" href="#">LOW PRO 59FIFTY</a></li>
+            <li><a class="menu-item" href="#">LP 59FIFTY</a></li>
             <li><a class="menu-item" href="#">9FIFTY</a></li>
             <li><a class="menu-item" href="#">39THIRTY</a></li>
             <li><a class="menu-item" href="#">9TWENTY</a></li>
@@ -24,5 +23,6 @@
       <main>
       </main>
     </section>
+    <script type="text/javascript" async src="main.js"></script>
   </body>
 </html>
