Refactoring: single event listener for li's parent

--- a/submissions/Roman-Halenko/js-dom/index.html
+++ b/submissions/Roman-Halenko/js-dom/index.html
@@ -13,11 +13,11 @@
     <section>
       <nav id="navbar">
         <ul>
-            <li><a class="menu-item" href="#">59FIFTY</a></li>
-            <li><a class="menu-item" href="#">LP 59FIFTY</a></li>
-            <li><a class="menu-item" href="#">9FIFTY</a></li>
-            <li><a class="menu-item" href="#">39THIRTY</a></li>
-            <li><a class="menu-item" href="#">9TWENTY</a></li>
+            <li class="menu-item">59FIFTY</li>
+            <li class="menu-item">LP 59FIFTY</li>
+            <li class="menu-item">9FIFTY</li>
+            <li class="menu-item">39THIRTY</li>
+            <li class="menu-item">9TWENTY</li>
         </ul>
       </nav>
       <main>
