--- a/submissions/IrynaY/friends-app/index.html
+++ b/submissions/IrynaY/friends-app/index.html
@@ -17,14 +17,14 @@
                 <hr>
                 <div id="name-sort">
                     <label>Sort by name:</label>
-                    <img src="img/az.png" id="name-asc"> 
-                    <img src="img/za.png" id="name-desc"> 
+                    <img src="img/az.png" id="name-asc" data-sort="name">
+                    <img src="img/za.png" id="name-desc" data-sort="name">
                 </div>
                 <hr>
                 <div id="age-sort">
                     <label>Sort by age:</label>
-                    <img src="img/dsc.png" id="age-asc"> 
-                    <img src="img/asc.png" id="age-desc"> 
+                    <img src="img/dsc.png" id="age-asc" data-sort="age">
+                    <img src="img/asc.png" id="age-desc" data-sort="age">
                 </div>
                 <hr>
                 <div id="gender">
@@ -34,7 +34,7 @@
                     <input type="radio" id="gender-f" name="gender" value="female">
                 </div>
                 <hr>
-                <img id="filter-reset" src="img/rest.png"> 
+                <img id="filter-reset" src="img/rest.png">
             </form>
         </aside>
         <div id="content"></div>
