implement OOP code organization

--- a/submissions/Aldegid/js-oop-frogger/index.html
+++ b/submissions/Aldegid/js-oop-frogger/index.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <strong><p>Wins <span class="wins">0</span></p></strong>
-    <strong><p>Lives <span class="lives">3</span></p></strong>
+    <strong><p>Wins: <span class="wins">0</span></p></strong>
+    <strong><p>Lives: <span class="lives">3</span></p></strong>
     <p class="game-over" style="display : none">GAME OVER !</p>
 
     <script src="js/resources.js"></script>
