change logic after first  review

--- a/submissions/igkos/friends-app/index.html
+++ b/submissions/igkos/friends-app/index.html
@@ -16,7 +16,7 @@
         <li class="nav__item">
           <label>
             <select name="order by">
-              <option>order by ▼▲</option>
+              <option value=``>order by ▼▲</option>
               <option value="ascendingAge">age ▼</option>
               <option value="descendingAge">age ▲</option>
               <option value="ascendingFirstName">Name ▼</option>
@@ -26,7 +26,7 @@
         </li>
         <li class="nav__item">
           <select name="gender">
-            <option>gender ▼▲</option>
+            <option value="all">gender ▼▲</option>
             <option value="male">male</option>
             <option value="female">female</option>
           </select>
