Fix inconsistent code formating

--- a/submissions/rrrds/memory-pair-game/index.html
+++ b/submissions/rrrds/memory-pair-game/index.html
@@ -1,28 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Memory Pair Game</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-      
-        <link rel="apple-touch-icon" href="icon.png">
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/main.css">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="x-ua-compatible" content="ie=edge" />
+    <title>Memory Pair Game</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-        <link href="https://fonts.googleapis.com/css?family=Monoton|Roboto" rel="stylesheet">
-      </head>
+    <link rel="apple-touch-icon" href="icon.png" />
+    <link rel="stylesheet" href="css/normalize.css" />
+    <link rel="stylesheet" href="css/main.css" />
 
-    <body>
-        <div class="playfield">
-            
-        </div>
+    <link href="https://fonts.googleapis.com/css?family=Monoton|Roboto" rel="stylesheet" />
+  </head>
 
-        <div class="finish-modal finish-modal--hide">
-            <h2>well done!</h2>
-            <button class="finish-modal__button">restart</button>
-        </div>
+  <body>
+    <div class="playfield"></div>
 
-        <script src="js/app.js"></script>
-    </body>
+    <div class="finish-modal finish-modal--hide">
+      <h2>well done!</h2>
+      <button class="finish-modal__button">restart</button>
+    </div>
+
+    <script src="js/app.js"></script>
+  </body>
 </html>
