add Array.prototype.find and data-attributes

--- a/submissions/AlexNugda/js-dom/index.html
+++ b/submissions/AlexNugda/js-dom/index.html
@@ -30,7 +30,7 @@
     <section class="content">
       <article>
         <h2 class = "article-title">Ту-22М3 (Backfire)</h2>
-        <img class = "article-image" src="img/aircraft/tu22/tu22m3-3.jpg">
+        <img class = "article-image" data-img="1" src="img/aircraft/tu22/tu22m3-3.jpg">
 		<p class = "article-text">Сверхзвуковой дальний бомбардировщик «Ту-22М3» предназначен для поражения целей по всему евразийскому континенту и в близлежащих морях. 
 			Недавно бомбардировщики прошли модернизацию и получили совершенно новую бортовую электронику. 
 			Проведенная модернизация повысила возможности бомбардировщика в прорыве ПВО типа «Иджис», еще модернизированный бомбардировщик часто называют убийцей ЕвроПро. <br>
@@ -38,9 +38,9 @@
 			развивающая скорость более 4000 километров в час, обладающая дальностью полета до 1000 километров. 
 			Скорость самого бомбардировщика-ракетоносца достигает 2300 км/ч. <br><br>
 			Самолеты семейства «Ту-22М» состояли на вооружении ВВС Украины. 
-			Однако на данный момент украинцы демонтировали все свои 60 «Ту-22М» (17 «Ту-22М2» и 43 «Ту-22М3»).
+			Однако на данный момент Украина демонтировала все свои 60 «Ту-22М» (17 «Ту-22М2» и 43 «Ту-22М3»).
 		</p>
-		<img class = "article-image" src="img/aircraft/tu22/800px-tu-22_scrapyard.jpg">
+		<img class = "article-image" data-img="2" src="img/aircraft/tu22/800px-tu-22_scrapyard.jpg">
       </article>
     </section>
     
