refactor after review

--- a/submissions/AlinaLadybug/memory-pair-game/index.html
+++ b/submissions/AlinaLadybug/memory-pair-game/index.html
@@ -6,7 +6,7 @@
   <link rel="preload" href="img/back_1.jpg" as="image">
   <link rel="stylesheet" type="text/css" href="css/style.css" as="style">
   <link rel="shortcut icon" href="img/fireworks.ico" />
-  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/bootstrap.css">
   <script src="js/script.js"></script>
 </head>
 
