--- a/submissions/o-msh/friends-app/index.html
+++ b/submissions/o-msh/friends-app/index.html
@@ -19,22 +19,22 @@
                 <div class="filter_gender">
                     <fieldset>
                         <legend>Gender:</legend>
-                        <input type="radio" name="gender" value="male"><label>Male</label>
-                        <input type="radio" name="gender" value="female"><label>Female</label>
+                        <input type="radio" id="gender_male" name="gender" value="male"><label for="gender_male">Male</label>
+                        <input type="radio" id="gender_female" name="gender" value="female"><label for="gender_female">Female</label>
                     </fieldset>
                 </div>
                 <div class="filter_name">
                     <fieldset>
                         <legend>Name:</legend>
-                        <input type="radio" name="sort" data-type="name" value="asc"><label>A-Z</label>
-                        <input type="radio" name="sort" data-type="name" value="desc"><label>Z-A</label>
+                        <input type="radio" id="name_asc" name="sort" data-type="name" value="asc"><label for="name_asc">A-Z</label>
+                        <input type="radio" id="name_desc" name="sort" data-type="name" value="desc"><label for="name_desc">Z-A</label>
                     </fieldset>
                 </div>
                 <div class="filter_age">
                     <fieldset>
                         <legend>Age:</legend>
-                        <input type="radio" name="sort" data-type="age" value="asc"><label>&#8593;</label>
-                        <input type="radio" name="sort" data-type="age" value="desc"><label>&#8595;</label>
+                        <input type="radio" id="age_asc" name="sort" data-type="age" value="asc"><label for="age_asc">&#8593;</label>
+                        <input type="radio" id="age_desc" name="sort" data-type="age" value="desc"><label for="age_desc">&#8595;</label>
                     </fieldset>
                 </div>
                 <div class="filter_btns">
