--- a/submissions/denislukianenko/memory-pair-game/index.html
+++ b/submissions/denislukianenko/memory-pair-game/index.html
@@ -11,5 +11,9 @@
   <body>
     <h1>Technologies Pair Game</h1>
     <div class="field"></div>
+    <div class="modal">
+      <h1>You win!</h1>
+      <button onclick="startagain()">Start Again</button>
+    </div>
   </body>
 </html>
