Edit for requested changes 2

--- a/submissions/denislukianenko/memory-pair-game/index.html
+++ b/submissions/denislukianenko/memory-pair-game/index.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Technologies Pair Game</title>
-    <script src="main.js" defer></script>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <h1>Technologies Pair Game</h1>
     <div class="field"></div>
     <div class="modal">
-      <h1>You win!</h1>
+      <h2>You win!</h2>
       <button onclick="startagain()">Start Again</button>
     </div>
+    <script src="main.js"></script>
   </body>
 </html>
