implement required changes

--- a/submissions/Aldegid/memory-pair-game/index.html
+++ b/submissions/Aldegid/memory-pair-game/index.html
@@ -14,7 +14,7 @@
     <div class="game-container">
     </div>
     <div class="modal-container modal-hidden">
-      <h2>Congrats!,  <br> YOU WINNER!</h2>
+      <h2>Congrats!<br>YOU WINNER!</h2>
       <button class="button">Play again</button>
     </div>
   </div>
