--- a/submissions/denislukianenko/memory-pair-game/index.html
+++ b/submissions/denislukianenko/memory-pair-game/index.html
@@ -9,8 +9,8 @@
   </head>
   <body>
     <h1>Technologies Pair Game</h1>
-    <div class="field"></div>
-    <div class="modal">
+    <div id="field"></div>
+    <div id="modal" class="modal">
       <h2>You win!</h2>
       <button onclick="startagain()">Start Again</button>
     </div>
